--- a/SoftyCinema/src/componants/nav/_nav.scss
+++ b/SoftyCinema/src/componants/nav/_nav.scss
@@ -6,16 +6,7 @@ nav {
     width: 13rem;
   }
   div {
-    @include flex(row, 0.25rem);
-    background: $primary_linear;
-    padding: 1rem;
-    border-radius: $base_radius;
-    font-size: 1.15rem;
-    height: 1.5rem;
-    color: white;
-    img {
-      height: 2.2rem;
-    }
+    @include button();
   }
   .search {
     justify-self: center;
