--- a/SoftyCinema/src/componants/main/_main.scss
+++ b/SoftyCinema/src/componants/main/_main.scss
@@ -1,4 +1,5 @@
 main {
+  margin-bottom: 5rem;
   h1 {
     margin: 1rem 0;
     background: $primary_linear;
@@ -25,6 +26,19 @@ main {
       }
       .swiper-pagination-bullets {
         margin-bottom: -0.8rem;
+      }
+      .swiper-button-next,
+      .swiper-button-prev,
+      .swiper-button-disabled {
+        color: $primary;
+        background-color: $black;
+        border-radius: 50%;
+        padding: 0.25rem;
+        height: 3rem;
+        width:3rem;
+        svg{
+          margin-right: -1rem;
+        }
       }
     }
   }
