--- a/SoftyCinema/src/scss/index.scss
+++ b/SoftyCinema/src/scss/index.scss
@@ -49,4 +49,5 @@ input[type="radio"] {
 @import "../componants/main/main.scss";
 @import "../componants/main/card.scss";
 @import "../componants/nav/nav.scss";
+@import "../componants//details/details";
 /*----------------------------------------*/
