--- a/SoftyCinema/src/componants/main/_main.scss
+++ b/SoftyCinema/src/componants/main/_main.scss
@@ -1,45 +1,47 @@
 main {
   margin-bottom: 5rem;
+  position: relative;
   h1 {
-    margin: 1rem 0;
+    margin-top: 3rem;
     background: $primary_linear;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+  .no_results {
+    width: fit-content;
+    margin: 3rem auto;
+  }
   section {
-    @include flex(row, 3rem);
+    @include flex(row, 1.5rem);
     .cards_container {
       width: 100%;
       justify-items: center;
-      .swiper-wrapper {
-        @include flex;
-        width: 100%;
-        height: 100%;
-        .swiper-slide {
-          object-fit: cover;
-          width: 13rem;
-        }
-      }
-      .swiper-pagination-bullet {
-        width: 0.8rem;
-        height: 0.8rem;
-      }
-      .swiper-pagination-bullets {
-        margin-bottom: -0.8rem;
-      }
-      .swiper-button-next,
-      .swiper-button-prev,
-      .swiper-button-disabled {
-        color: $primary;
-        background-color: $black;
-        border-radius: 50%;
-        padding: 0.25rem;
-        height: 3rem;
-        width:3rem;
-        svg{
-          margin-right: -1rem;
-        }
-      }
     }
+  }
+}
+.swiper-wrapper {
+  @include flex;
+  width: 100%;
+  height: 100%;
+  .swiper-slide {
+    object-fit: cover;
+    width: 13rem;
+  }
+  .swiper-pagination-bullet {
+    width: 0.8rem;
+    height: 0.8rem;
+  }
+  .swiper-pagination-bullets {
+    margin-bottom: -0.8rem;
+  }
+}
+.swiper-button-next,
+.swiper-button-prev,
+.swiper-button-disabled {
+  color: $primary;
+
+  padding: 0.15rem;
+  svg {
+    margin-right: -1rem;
   }
 }
