--- a/SoftyCinema/src/scss/_variables.scss
+++ b/SoftyCinema/src/scss/_variables.scss
@@ -1,20 +1,20 @@
 //Impoprts
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Poppins:wght@300;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Poppins:wght@300;500;600;700;800;900&display=swap");
 // Fonts
 $myFont: "Poppins";
 
 // main colors
-$primary:#8323FF;
-$black : #1E1F28;
+$primary: #8323ff;
+$primary_linear: linear-gradient(91deg, #8323ff 0.99%, #ff2daf 102.1%);
+$black: #1e1f28;
 $search_text: white;
-$grey:#8B8D9B;
-$yellow: #FEEA35;
-$primary_linear: linear-gradient(91deg, #8323FF 0.99%, #FF2DAF 102.1%);
+$details_text: #BCBCBC;
+$grey: #8b8d9b;
+$yellow: #feea35;
 
-// Font weights 
-
-
+// Font weights
+$details_text_weight: 300;
 //Font sizes
 
 //Border Radius
-$base_radius:1rem;
+$base_radius: 1rem;
