--- a/SoftyCinema/src/componants/details/_details.scss
+++ b/SoftyCinema/src/componants/details/_details.scss
@@ -1,6 +1,6 @@
 .details_container {
   @include grid(42% auto, auto);
-  height: 30vh;
+  height: 70vh;
   width: 60vw;
   position: fixed;
   left: 1%;
@@ -26,11 +26,14 @@
     background-size: cover;
     border-top-right-radius: $base_radius;
     border-bottom-right-radius: $base_radius;
+    width: 100%;
+    height: 74.85vh;
   }
   .right_container {
     @include grid(auto auto, 10% auto auto auto auto, 1rem);
-    height: 91.5%;
-    width: 100%;
+    //width: 100%;
+    height: 100% ;
+    flex-basis: 100%;
     padding: 2rem 1rem;
     color: white;
     backdrop-filter: brightness(0.2) blur(4px);
