--- a/SoftyCinema/src/componants/details/_details.scss
+++ b/SoftyCinema/src/componants/details/_details.scss
@@ -30,9 +30,9 @@
     height: 74.85vh;
   }
   .right_container {
-    @include grid(auto auto, 10% auto auto auto auto, 1rem);
+    @include grid(auto auto, 20% auto auto auto auto, 1rem);
     //width: 100%;
-    height: 100% ;
+    height: 100%;
     flex-basis: 100%;
     padding: 2rem 1rem;
     color: white;
@@ -55,8 +55,14 @@
       }
     }
     .title {
+      @include flex(column);
+      justify-content: space-between;
+      align-items: flex-start;
       font-size: 2rem;
       grid-column: 1 / span 2;
+      .user_rating {
+        align-self: flex-end;
+      }
     }
     .runtime {
       @include flex(row, 0.25rem);
