code refactor for readability

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -47,7 +47,7 @@ input[type="radio"] {
 //Note responsive range (280px-2705px)
 // main scss
 @import "../componants/main/main.scss";
-@import "../componants/main/card.scss";
+@import "../componants/main/Card/card.scss";
 @import "../componants/nav/nav.scss";
 @import "../componants//details/details";
 /*----------------------------------------*/
