--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -51,3 +51,11 @@ input[type="radio"] {
 @import "../componants/nav/nav.scss";
 @import "../componants//details/details";
 /*----------------------------------------*/
+//Loader
+div:has(.home_loader) {
+  @include flex();
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  height: 100vh;
+}
