User auth system

--- a/src/pages/HomePage/componants/main/_main.scss
+++ b/src/pages/HomePage/componants/main/_main.scss
@@ -38,7 +38,7 @@ main {
 .swiper-button-next,
 .swiper-button-prev,
 .swiper-button-disabled {
-  color: $primary;
+  color: $primary !important  ;
 
   padding: 0.15rem;
   svg {
