--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,13 +7,14 @@ $myFont: "Poppins";
 $black: #1e1f28;
 $primary: #8323ff;
 $primary_linear: linear-gradient(91deg, #8323ff 0.99%, #ff2daf 102.1%);
-$secondary_linear:linear-gradient(91deg, #8323ff 0.99%, $black 102.1%);
+$secondary_linear: linear-gradient(91deg, #8323ff 0.99%, $black 102.1%);
 $search_text: white;
-$details_text: #BCBCBC;
+$details_text: #bcbcbc;
 $grey: #8b8d9b;
 $yellow: #feea35;
-$form_font_color:rgba(255, 255, 255, 1);
-$form-grey:#4D4D4D;
+$form_font_color: rgba(255, 255, 255, 1);
+$form-grey: #4d4d4d;
+$form_box_shasow: -8px 4px 5px 0px rgba(0, 0, 0, 0.24);
 
 // Font weights
 $details_text_weight: 300;
