--- a/src/pages/HomePage/componants/details/_details.scss
+++ b/src/pages/HomePage/componants/details/_details.scss
@@ -1,25 +1,20 @@
 .details_container {
+  position: fixed;
   @include grid(42% auto, auto);
   height: 70vh;
   width: 60vw;
-  position: fixed;
   left: 1%;
   top: 7%;
   z-index: 2;
-  transform: translateX(100vw);
-  transition: transform 2s ease-in-out;
-  //animation: 3s ease-in 1s infinite both running;
-  &_visible {
-    transform: translateX(10vw);
-    transition: transform 2s ease-in-out;
-    //animation: 0.5s linear 1s;
-  }
+  transform: translateX(10vw);
+  transition: all 5s;
   .poster {
     width: 100%;
     height: 82.5vh;
     border-top-left-radius: $base_radius;
     border-bottom-left-radius: $base_radius;
   }
+
   div:has(.right_container) {
     position: relative;
     background-position: center;
@@ -119,4 +114,12 @@
       }
     }
   }
+}
+.details_loader {
+  height: 70vh;
+  width: 60vw;
+  position: fixed;
+  left: 50%;
+  top: 40%;
+  z-index: 2;
 }
