--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Poppins:wght@300;500;600;700;800;900&display=swap");
 // Fonts
 $myFont: "Poppins";
-
+//light mode
+//black e1e0d7
+//primary 7cdc00
+//secondary 00d250
 // main colors
 $black: #1e1f28;
 $primary: #8323ff;
